# ADPT-AI

./: LICENSE  README.md  dockerfile  pyproject.toml  requirements.txt
data/task 1/: labels_task1.txt  training_set_task1_augmented.json
src/: import_data.ipynb  main.py  model.py  st1_tfidf.ipynb  st1_word2vec.ipynb  test.py  train.py
src/confs/: config.py  config.yaml
src/dataloader/: __init__.py  dataset.py  selection.py  utils.py
src/embeddings/: word2vec.py
src/utils/: classifier.py  evaluation.py  load_data.py  loss.py  misc.py  pre_process.py
